# Synesthesia

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
doc/: CodingRules.md  CodingStyle.DotSettings
docs/: CodingRules.md  Doxyfile
sln/: Synesthesia.sln
sln/sound-hello-world/: sound-hello-world.vcxproj  sound-hello-world.vcxproj.filters
sln/test-hello-world/: test-hello-world.vcxproj  test-hello-world.vcxproj.filters
src/gui/: HelloWorld.pro  main.cpp
src/sound-processing/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  helloworld.hpp  main.cpp
